--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-ts && npm run tslint",
+    "build": "npm run build-sass && npm run build-ts && npm run tslint",
     "serve": "node dist/server.js",
     "build-ts": "tsc",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "watch-ts": "tsc -w",
+    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
+    "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "keywords": [],
   "author": "",
@@ -21,6 +27,9 @@
   "devDependencies": {
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
+    "concurrently": "^3.6.0",
+    "node-sass": "^4.9.2",
+    "nodemon": "^1.17.5",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
